# Master-of-Orion-Q-A

./: .env example.py  .env.py  .gitignore  jojo.txt  pyproject.toml
RAG/: Hypothetical_Queries.py  LOTR.py  moo2.md  potential_answer.py
RAG/pushkin/c26b963b-75cf-483c-b455-5c164bbd0b37/: index_metadata.pickle
RAG/vectr_hyp/: chroma.sqlite3
moqa/: FIND_METADATA.py  Master of Orion  - Sheet1.csv  Master of Orion - Sheet1.csv  Master of Orion nf - Sheet1.csv  aaaaa.py  create_bd.py  create_vecorestore.py  first.py  md.py  meta.py  meta_find.py  metadata_fund.py  new_first.py  new_test.py  par_pdf.py  q.py  rag.py  retriever.pkl  second.py  simil_score.py  sql.py  summarize.py  test.py  test2.py  test3.py  test_pot.py  test_summarize.py  test_text.txt  tetst02.py  third.py
moqa/pushkin/: chroma.sqlite3
moqa/vectr_pushkin/: chroma.sqlite3
moqa/vectre/: chroma.sqlite3
moqa/vectre/a55ec544-93e4-461b-967c-b1efb594a397/: index_metadata.pickle
moqa/vectre2/: chroma.sqlite3
moqa/vectre_md/: chroma.sqlite3
